@@ -210,6 +210,9 @@ namespace RimWorld_LanguageWorker_French
 
 		public override string WithIndefiniteArticle(string str, Gender gender, bool plural = false, bool name = false)
 		{
+			if (str.NullOrEmpty())
+				return str;
+
 			//Names don't get articles
 			if (name)
 			{
@@ -588,6 +591,9 @@ namespace RimWorld_LanguageWorker_French
 
 		private string PluralizeOneWord(string str, Gender gender, int count = -1)
 		{
+			if (str.NullOrEmpty())
+				return str;
+
 			// Exceptions to general rules for plural
 			string item = str.ToLower();
 			string str_pluralized = str;
@@ -660,6 +666,9 @@ namespace RimWorld_LanguageWorker_French
 
 		private string PluralizeHyphenated(string str, Gender gender, int count = -1)
 		{
+			if (str.NullOrEmpty())
+				return str;
+
 			string[] array = str.Split('-');
 			if (array.NullOrEmpty())
 				return str;
@@ -819,6 +828,9 @@ namespace RimWorld_LanguageWorker_French
 
 		private static string PostProcessedFrenchGrammar(string str)
 		{
+			if (str.NullOrEmpty())
+				return str;
+
 			// "[dD]e des" are generated by some rules of type "de [x_indefinite]" in plural
 			str = str.Replace(" de des ", " des ")
 				.Replace("De des ", "Des ");
