@@ -1,3 +1,8 @@
+2020-11-29  b606  <7627533+b606@users.noreply.github.com>
+
+	* LanguageWorker_French.cs: Fix: Add NullOrEmpty tests for
+	string. Fix bug with UI editbox with empty string.
+
 2020-11-25  b606  <7627533+b606@users.noreply.github.com>
 
 	* LanguageWorker_French.cs: Do not overwrite kind.label
